name:              shoes
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Handler.Files
                     Handler.Home
                     Handler.Shoes
                     Import
                     Model
                     Models.Shoe
                     Settings
                     Settings.Development
                     Settings.StaticFiles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 0.6        && < 0.8
                 , attoparsec-conduit
                 , base64-bytestring
                 , bytestring                    >= 0.9        && < 0.11
                 , conduit                       >= 1.0        && < 2.0
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 2.1        && < 2.2
                 , filepath
                 , hamlet                        >= 1.1        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.0        && < 2.1
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3        && < 0.4
                 , persistent                    >= 1.3        && < 1.4
                 , persistent-sqlite             >= 1.3        && < 1.4
                 , persistent-template           >= 1.3        && < 1.4
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.2        && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , uuid
                 , wai
                 , wai-extra                     >= 2.0        && < 2.1
                 , wai-logger                    >= 2.1        && < 2.2
                 , warp                          >= 2.0        && < 2.1
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3

executable         shoes
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , shoes
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , shoes
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
